Fixed blurred Canvas

--- a/client/styles/style.less
+++ b/client/styles/style.less
@@ -207,15 +207,25 @@ button:hover:enabled {
   color: white;
 }
 
-#elevation
+#canvasContainer
 {
+  display: flex;
+  padding: 0;
   order: 1;
   color: @listItemColorActive;
   z-index: 99999;
   background-color: @listItemColor2;
-  padding-top: 5px;
   width: 70%;
   min-width: 50%;
+  margin: 0;
+  border: 0;
+  padding-top: 5px;
+}
+
+#elevation
+{
+  width: 100%;
+  height: 100%;
 }
 
 
